# raytracer-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: camera.hpp  color.hpp  dielectric.hpp  material.hpp  random.hpp  ray3.hpp  ray3hittable.hpp  ray3hittable_list.hpp  sphere.hpp  utils.hpp  vec3.hpp
include/hittables/: sphere.hpp  triangle.hpp
include/materials/: lambertian.hpp  metal.hpp
src/: camera.cpp  color.cpp  dielectric.cpp  lambertian.cpp  main.cpp  random.cpp  ray3.cpp  ray3hittable.cpp  ray3hittable_list.cpp  sphere.cpp  triangle.cpp  utils.cpp  vec3.cpp
src/hittables/: sphere.cpp  triangle.cpp
src/materials/: dielectric.cpp  lambertian.cpp  metal.cpp
test/: color_test.cpp  random_test.cpp  ray3_test.cpp  vec3_test.cpp
